overflow issues

--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@ body {
     font-size: 15px;
     font-weight: normal;
     color: hsl(0, 0%, 90%);
+    overflow-x: hidden;
+}
+
+html{
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 @font-face {
